--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,28 @@
-# Compiled class file
+# ===============================================
+#              1. Java & Compilation
+# ===============================================
+
+# Compiled class files
 *.class
 
-# Log file
+# Log files
 *.log
+*.log.*
+/logs/
 
-# BlueJ files
-*.ctxt
+# JVM crash files
+hs_err_pid*
+replay_pid*
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
 
-# Package Files #
+# ===============================================
+#              2. Maven Output
+# ===============================================
+
+# Target folder (contains compiled code, JARs, WARs, etc.)
+/target/
+
+# Package Files (збірки)
 *.jar
 *.war
 *.nar
@@ -18,7 +30,30 @@
 *.zip
 *.tar.gz
 *.rar
+*.jmod
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# ===============================================
+#              3. IDE Files (IntelliJ IDEA)
+# ===============================================
+
+# IntelliJ IDEA workspace files
+.idea/
+*.iml
+*.iws
+*.ipr
+
+# Generated directories (для IDE)
+/out/
+/bin/
+
+
+# ===============================================
+#              4. OS Generated Files
+# ===============================================
+
+# Windows
+Thumbs.db
+Desktop.ini
+
+# macOS
+.DS_Store
